--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,6 @@
 name: firebase_auth_module
-description: A Flutter application demonstrating Firebase Authentication with GetX for state management.
+description: A Flutter application demonstrating Firebase Authentication with
+  GetX for state management.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
@@ -13,6 +14,7 @@ dependencies:
   firebase_core: ^3.10.0
   flutter:
     sdk: flutter
+  flutter_native_splash: ^2.4.4
   get: ^4.6.6
 
 dev_dependencies:
@@ -20,11 +22,16 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 flutter:
-
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
+flutter_native_splash:
+  color: "#ffffff"
+  image: assets/logo.png
+  android: true
+  ios: true
+  web: true
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
